<resources>
    <string name="app_name">Everynet Field Test Logger</string>
    <string name="login_title">Field Test Logger</string>
    <string-array name="regions">
        <item>ATC</item>
        <item>AP</item>
        <item>EU</item>
        <item>US</item>
    </string-array>
    <string name="error_permissions">You don\'t have the necessary permissions use this application</string>
    <string name="ok">OK</string>
    <string name="nok">Error</string>
    <string name="login">Login</string>
    <string name="logout">Log Out</string>
    <string name="search">Search</string>
    <string name="device_eui">Test Device EUI</string>
    <string name="everynet_logo">Everynet Logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="region">Region</string>
    <string name="mac">Device EUI (MAC) of 16 digits</string>
    <string name="no_device">Device not found</string>
    <string name="no_band">Band not found</string>
    <string name="startTest">Start Test</string>
    <string name="deviceEuiSize">Device EUI incorrect length</string>
    <string name="band_t">Band:</string>
    <string name="data_rates_t">Datarates:</string>
    <string name="gps_settings">GPS settings</string>
    <string name="gps_settings_message">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="gps_no_permission">GPS coordinates will be inaccurate</string>
    <string name="logged_out">Logged out</string>
    <string name="lat">Lat.:</string>
    <string name="longi">Long.:</string>
    <string name="export_csv">Export CSV</string>
    <string name="export_json">Export JSON</string>
    <string name="no_permission">Permissions not granted</string>
    <string name="enable_permission">Please Enable this permission for</string>
    <string name="dr">DR:</string>

</resources>