<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TestActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/device_eui_l"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_search"
        >

        <EditText
            android:id="@+id/device_eui"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="text"
            android:maxLines="1"
            android:lines="1"
            android:maxLength="16"
            android:hint="@string/mac"
            android:layout_margin="15dp"
            android:autofillHints=""
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/band"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="?android:attr/textColorPrimary"
        android:layout_margin="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/device_eui_l"
        />

    <TextView
        android:id="@+id/data_rates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="?android:attr/textColorPrimary"
        android:layout_margin="15dp"
        app:layout_constraintLeft_toRightOf="@id/band"
        app:layout_constraintTop_toBottomOf="@id/device_eui_l"
        />

    <Button
        android:id="@+id/start_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/startTest"
        android:textSize="15sp"
        android:textColor="?android:attr/textColorPrimary"
        android:layout_margin="15dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/data_rates"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/actual_data_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="?android:attr/textColorPrimary"
        android:layout_margin="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start_test"
        />

    <TextView
        android:id="@+id/test_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="?android:attr/textColorPrimary"
        android:layout_margin="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/logout_button"
        />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:layout_margin="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>